force-app/main/default/objects/Dog_Contact__c/Dog_Contact__c.object-meta.xml
<CustomObject>
    <description>Connection between a dog and an account</description>
    <label>Dog Contact</label>
    <nameField>
        <label>Dog Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dogs Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>