force-app/main/default/objects/Dog_Contact__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A dog for this account</description>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Dogs Accounts</relationshipLabel>
    <relationshipName>Dogs_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>