force-app/main/default/objects/Dog_Contact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Relationship type between a dog and contact</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>